@@ -1,67 +1,99 @@
 {
     "## Comment" = "Do NOT change this file, Gorm maintains it";
-    Defaults = {
+    DefaultEntry = {
 	Actions = (
-	    "arrayAddAction:",
-	    "arrayRemoveAction:",
-	    "boolPopupAction:",
-	    "boolSetAction:",
-	    "arraySetAction:",
-	    "numberSetAction:",
-	    "stringSetAction:",
-	    "boolDefaultRevertAction:",
-	    "arrayDefaultRevertAction:",
-	    "numberDefaultRevertAction:",
-	    "stringDefaultRevertAction:"
+	    "setUserValue:"
 	);
 	Outlets = (
-	    _window,
-	    categoryField,
-	    categoryLabel,
-	    descriptionView,
-	    editorBox,
-	    namesScroll,
-	    editorsWin,
-	    boolEditorBox,
-	    arrayEditorBox,
-	    numberEditorBox,
-	    stringEditorBox,
-	    arrayEdAdd,
-	    arrayEdRemove,
-	    arrayEdScroll,
-	    arrayEdSet,
-	    boolEdPopup,
-	    boolEdSet,
-	    arrayEdField,
-	    numberEdField,
-	    numberEdSet,
-	    stringEdField,
-	    stringEdSet,
-	    boolEdDefaultRevert,
-	    arrayEdDefaultRevert,
-	    numberEdDefaultRevert,
-	    stringEdDefaultRevert
+	    defaultValue,
+	    userValue
 	);
 	Super = NSObject;
+    };
+    Defaults = {
+	Actions = (
+	    "namesMatrixAction:",
+	    "arrayAddAction:",
+	    "arrayDefaultRevertAction:",
+	    "arrayEdMatrixAction:",
+	    "arrayRemoveAction:",
+	    "arraySetAction:",
+	    "boolDefaultRevertAction:",
+	    "boolPopupAction:",
+	    "boolSetAction:",
+	    "listDefaultRevertAction:",
+	    "listPopupAction:",
+	    "listSetAction:",
+	    "numberDefaultRevertAction:",
+	    "numberSetAction:",
+	    "stringDefaultRevertAction:",
+	    "stringSetAction:"
+	);
+	Outlets = (
+	    namesScroll,
+	    categoryLabel,
+	    categoryField,
+	    descriptionView,
+	    editorBox,
+	    editorsWin,
+	    stringEditorBox,
+	    stringEdField,
+	    stringEdDefaultRevert,
+	    stringEdSet,
+	    boolEditorBox,
+	    boolEdPopup,
+	    boolEdDefaultRevert,
+	    boolEdSet,
+	    numberEditorBox,
+	    numberEdField,
+	    numberEdDefaultRevert,
+	    numberEdSet,
+	    arrayEditorBox,
+	    arrayEdScroll,
+	    arrayEdField,
+	    arrayEdAdd,
+	    arrayEdRemove,
+	    arrayEdDefaultRevert,
+	    arrayEdSet,
+	    listEditorBox,
+	    listEdPopup,
+	    listEdDefaultRevert,
+	    listEdSet
+	);
+	Super = NSPreferencePane;
     };
     FirstResponder = {
 	Actions = (
 	    "arrayAddAction:",
+	    "arrayDefaultRevertAction:",
+	    "arrayEdMatrixAction:",
 	    "arrayRemoveAction:",
 	    "arraySetAction:",
 	    "boolDefaultRevertAction:",
 	    "boolPopupAction:",
 	    "boolSetAction:",
 	    "closeMainWindow:",
-	    "arrayDefaultRevertAction:",
+	    "listDefaultRevertAction:",
+	    "listPopupAction:",
+	    "listSetAction:",
+	    "namesMatrixAction:",
 	    "nextButtAction:",
 	    "numberDefaultRevertAction:",
 	    "numberSetAction:",
 	    "prevButtAction:",
 	    "runInfoPanel:",
+	    "setUserValue:",
 	    "showAllButtAction:",
 	    "stringDefaultRevertAction:",
 	    "stringSetAction:"
+	);
+	Super = NSObject;
+    };
+    NSPreferencePane = {
+	Actions = (
+	);
+	Outlets = (
+	    "_window"
 	);
 	Super = NSObject;
     };
